--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 		</style>
 	</head>
 	<body>
-		<script src="require.js" data-main="main.js"></script>
+		<script src="lib/require.js" data-main="main.js"></script>
 	</body>
 </html>
